// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto";
option java_outer_classname = "ServerProto";
option objc_class_prefix = "CTS";

package proto;

// The greeting service definition.
service Server {
  // Sends a greeting
  rpc Register (RegisterRequest) returns (RegisterReply) {}
  rpc FileTransfer (FileTransferRequest) returns (FileTransferReply) {}
}

// The request message containing the user's name.
message RegisterRequest {
  string name = 1;
  string password = 2;
}

// The response message containing the greetings
message RegisterReply {
  string ok = 1;
}

message FileTransferRequest {
  bytes file = 1;
  string username = 2;
  string password = 3;
}

message FileTransferReply {
  bool ok = 1;
}